# bedelibry-app

./: .gitattributes  .gitignore  README.md  cabal.project  default.nix  m1-cabal.project  out_android
.github/workflows/: build.yml
.obelisk/impl/: github.json
common/: common.cabal
common/src/: Montague.hs
common/src/Montague/: Autocomplete.hs  Display.hs  Lexicon.hs  Semantics.hs  Types.hs
frontend/: frontend.cabal
frontend-lib/: frontend-lib.cabal
frontend-lib/src/: Frontend.hs
frontend-lib/src/Bedelibry/: Frontend.hs
frontend-lib/src/Bedelibry/Frontend/: NavBar.hs  Route.hs  Strings.hs  TabDisplay.hs  Utils.hs
frontend-lib/src/Bedelibry/Frontend/Pages/: About.hs  Entity.hs  Home.hs  KnowledgeBase.hs  Notes.hs  Preferences.hs  Schema.hs  SchemaManagement.hs  Types.hs  Welcome.hs
frontend-lib/src/Bedelibry/Frontend/Utils/: Javascript.hs
frontend-lib/src/Bedelibry/Parser/: Markdown.hs
frontend-lib/src/Control/Monad/: Toast.hs
frontend-lib/src/Montague/: Frontend.hs
frontend-lib/src/Montague/Frontend/: Entity.hs  Home.hs  NavBar.hs  Preferences.hs  Route.hs  Routes.hs  Schema.hs  Strings.hs  TabDisplay.hs  Types.hs  Utils.hs
frontend-lib/src/Montague/Frontend/Pages/: About.hs  Entity.hs  Home.hs  KnowledgeBase.hs  Notes.hs  Preferences.hs  Schema.hs  SchemaManagement.hs  Types.hs  Welcome.hs
frontend-lib/src/Montague/Frontend/Utils/: Javascript.hs
frontend-lib/src/Montague/Parser/: Markdown.hs
frontend/src/: Frontend.hs
frontend/src-bin/: main-reflex.hs  main.hs
frontend/src/Frontend/: Obelisk.hs
frontend/src/Obelisk/: Frontend.hs  Obelisk.hs
m1-frontend/: m1-frontend.cabal
m1-frontend/src/: main.hs
static/: gtk.css  main.css  material-colors-dark.css  material-colors-default.css  pane.css  pane.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
