name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: 
      base
    , obelisk-route
    , mtl
    , text
    , monad-tree
    , partial-order
    , parsec
  default-extensions:
      LambdaCase
    , MultiParamTypeClasses
    , FunctionalDependencies
    , ScopedTypeVariables
    , ExistentialQuantification
  exposed-modules:
    Common.Api
    Common.Route
    Montague
    Montague.Semantics
    Montague.Types
    Montague.Lexicon
    Montague.Display
    Montague.Autocomplete
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
