name: frontend-lib
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  default-extensions:
      LambdaCase
    , MultiParamTypeClasses
    , FunctionalDependencies
    , ScopedTypeVariables
    , TypeApplications
    , DataKinds
    , UndecidableInstances
    , FlexibleInstances
    , FlexibleContexts
    , RecursiveDo
    , BlockArguments
    , OverloadedStrings
    , GADTs
    , PartialTypeSignatures
    , ImplicitParams
  build-depends: base
               , containers
               , data-default
               , free
               , jsaddle
               , reflex
               , reflex-dom-core
               , text
               , lens
               , partial-order
               , monad-tree
               , montague
               , pure-prolog
               , transformers
               , profunctors
               , comonad
               , aeson
               , directory
  exposed-modules:
      Montague.Frontend
    , Montague.Frontend.Strings
    , Montague.Frontend.Route
    , Montague.Frontend.Utils
    , Montague.Frontend.Utils.Javascript
    , Montague.Frontend.TabDisplay
    , Montague.Frontend.NavBar
    , Montague.Frontend.Pages.Welcome
    , Montague.Frontend.Pages.Home
    , Montague.Frontend.Pages.Notes
    , Montague.Frontend.Pages.Schema
    , Montague.Frontend.Pages.Entity
    , Montague.Frontend.Pages.Types
    , Montague.Frontend.Pages.Preferences
    , Montague.Frontend.Pages.About
    , Montague.Frontend.Pages.KnowledgeBase
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
