name: frontend-lib
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  default-extensions:
      LambdaCase
    , MultiParamTypeClasses
    , FunctionalDependencies
    , ScopedTypeVariables
    , TypeApplications
    , DataKinds
    , UndecidableInstances
    , FlexibleInstances
    , FlexibleContexts
    , RecursiveDo
    , BlockArguments
    , OverloadedStrings
    , GADTs
    , PartialTypeSignatures
    , ImplicitParams
  build-depends: base
               , containers
               , data-default
               , free
               , jsaddle
               , reflex
               , reflex-dom-core
               , text
               , lens
               , parsec
               , partial-order
               , monad-tree
               , montague
               , pure-prolog
               , transformers
               , profunctors
               , comonad
               , aeson
               , directory
  exposed-modules:
      Bedelibry.Parser.Markdown
    , Bedelibry.Frontend
    , Bedelibry.Frontend.Strings
    , Bedelibry.Frontend.Route
    , Bedelibry.Frontend.Utils
    , Bedelibry.Frontend.Utils.Javascript
    , Bedelibry.Frontend.TabDisplay
    , Bedelibry.Frontend.NavBar
    , Bedelibry.Frontend.Pages.Welcome
    , Bedelibry.Frontend.Pages.Home
    , Bedelibry.Frontend.Pages.Notes
    , Bedelibry.Frontend.Pages.Schema
    , Bedelibry.Frontend.Pages.Entity
    , Bedelibry.Frontend.Pages.Types
    , Bedelibry.Frontend.Pages.Preferences
    , Bedelibry.Frontend.Pages.About
    , Bedelibry.Frontend.Pages.KnowledgeBase
    , Bedelibry.Frontend.Pages.SchemaManagement
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
